--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=novashop
 spring.datasource.url=jdbc:mysql://localhost:3306/novashop
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Lima
 spring.jpa.properties.hibernate.jdbc.batch_size=20
