--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,21 +2,30 @@ spring.application.name=novashop
 spring.datasource.url=jdbc:mysql://localhost:3306/novashop
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=20000
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.jdbc.time_zone=America/Lima
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
-spring.servlet.multipart.max-file-size=5MB
-management.endpoints.web.exposure.include=health,info,metrics
-management.endpoint.health.show-details=always
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.thymeleaf.cache=false
-spring.web.resources.cache.period=0
-logging.level.com.novashop=DEBUG
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+app.upload.dir=uploads/productos/
+app.upload.allowed-extensions=.jpg,.jpeg,.png,.webp
+logging.level.root=INFO
+logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer=ERROR
+logging.level.com.example.novashop=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.file.name=logs/novashop.log
 logging.file.max-size=10MB
 logging.file.max-history=30
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+spring.security.remember-me.token-validity-seconds=86400
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
+spring.profiles.active=dev
