--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=novashop
 spring.datasource.url=jdbc:mysql://localhost:3306/novashop
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.connection-timeout=20000
